<resources>
    <string name="app_name">Meu AuMigo</string>

    <string name="lorem_ipsum">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
    <string name="description">Descrição</string>

    //Login E Cadastro
    <string name="btn_sign_in">Entrar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="forgot_password">Esqueceu a sua senha?</string>
    <string name="already_have_an_account">Já tem uma conta? <b>Acessar</b></string>
    <string name="email_hint">Digite seu e-mail</string>
    <string name="password_hint">Digite sua senha</string>
    <string name="confirm_password_hint">Digite novamente sua senha</string>
    <string name="name_hint">Digite seu nome</string>
    <string name="phone_hint">Digite seu telefone</string>

    //Home
    <string name="bt_take_me_home">Me leva pra casa!</string>
    <string name="bt_searching_for_a_home">Estou procurando um lar!</string>

    //Perfil
    <string name="profile_data">Dados cadastrais</string>
    <string name="profile_favorite">Meus Aumigos!</string>
    <string name="profile_need_a_pet">Quero adotar!</string>
    <string name="profile_register_pet">Cadastrar um pet!</string>
    <string name="change_name_data">Alterar nome</string>
    <string name="change_email_data">Alterar e-mail</string>
    <string name="change_password_data">Alterar senha</string>
    <string name="change_phone_data">Alterar telefone</string>


    //LookingForHome
    <string name="looking_for_home_name">Nome do pet</string>
    <string name="looking_for_home_breed">Raça do pet</string>
    <string name="looking_for_home_sex">Sexo do pet</string>
    <string name="looking_for_home_size">Tamanho do pet</string>
    <string name="looking_for_home_age">Idade do pet</string>
    <string name="looking_for_home_localization">Localização do pet</string>
    <string name="looking_for_home_description">Descrição do pet</string>
    <string name="looking_for_home_register_pet">Cadastrar</string>

    //Onboarding
    <string name="onboarding_text_title">Você está a apenas um passo do seu melhor amigo!</string>
    <string name="onboarding_bt_lets_start">Vamos começar!</string>

    //PetDetails
    <string name="petdetails_button_adopt">Adotar!</string>"

    //Updates
    <string name="update_name">Digite o nome que deseja</string>
    <string name="btn_update_name">Atualizar nome</string>

</resources>