<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContainer"
        android:layout_width="205dp"
        android:layout_height="205dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etName">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circular_field" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContainerMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/cvContainer"
        app:layout_constraintEnd_toEndOf="@id/cvContainer"
        app:layout_constraintStart_toStartOf="@id/cvContainer"
        app:layout_constraintTop_toTopOf="@id/cvContainer">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_pet_example"
            android:scaleType="centerCrop"
            />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/circular_data_field"
        android:elevation="5dp"
        android:fontFamily="@font/baloo2_bold"
        android:hint="@string/name_hint"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:textColor="@color/light_hint_orange"
        android:textColorHint="@color/light_hint_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvContainer"
        app:layout_constraintBottom_toTopOf="@id/etLogin"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/circular_data_field"
        android:elevation="5dp"
        android:fontFamily="@font/baloo2_bold"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/light_hint_orange"
        android:textColorHint="@color/light_hint_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintBottom_toTopOf="@id/etPassword"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/circular_data_field"
        android:elevation="5dp"
        android:fontFamily="@font/baloo2_bold"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/light_hint_orange"
        android:textColorHint="@color/light_hint_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLogin"
        app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/circular_data_field"
        android:elevation="5dp"
        android:fontFamily="@font/baloo2_bold"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/light_hint_orange"
        android:textColorHint="@color/light_hint_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/etPhone"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/circular_data_field"
        android:elevation="5dp"
        android:fontFamily="@font/baloo2_bold"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/light_hint_orange"
        android:textColorHint="@color/light_hint_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/circular_button_field"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/baloo2_bold"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAlreadyHaveAnAccount" />

    <TextView
        android:id="@+id/btnAlreadyHaveAnAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/baloo2_medium"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>