<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange">

    <ImageView
        android:id="@+id/ivPetImg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_pet_example"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPetName"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo2_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/ibLike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPetImg" />

    <ImageButton
        android:id="@+id/ibLike"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_like"
        app:layout_constraintEnd_toStartOf="@id/ibShare"
        app:layout_constraintTop_toTopOf="@id/tvPetName" />

    <ImageButton
        android:id="@+id/ibShare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ibLike" />

    <TextView
        android:id="@+id/tvPetBreed"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/baloo2_medium"
        android:maxLines="1"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvPetName"
        app:layout_constraintTop_toBottomOf="@id/tvPetName" />

    <TextView
        android:id="@+id/tvPetAge"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:fontFamily="@font/baloo2_medium"
        android:maxLines="1"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvPetName"
        app:layout_constraintTop_toBottomOf="@id/tvPetBreed" />

    <ImageView
        android:id="@+id/ivLocalizationLogo"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_home_localization"
        app:layout_constraintStart_toStartOf="@id/tvPetAge"
        app:layout_constraintTop_toBottomOf="@id/tvPetAge" />

    <TextView
        android:id="@+id/tvPetLocalization"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/baloo2_bold"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLocalizationLogo"
        app:layout_constraintTop_toTopOf="@id/ivLocalizationLogo" />

    <TextView
        android:id="@+id/tvDescriptionTitle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo2_bold"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/ibShare"
        app:layout_constraintStart_toStartOf="@id/ivLocalizationLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLocalizationLogo" />

    <TextView
        android:id="@+id/tvPetDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/baloo2_medium"
        android:text="@string/lorem_ipsum"
        android:textSize="20sp"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/tvDescriptionTitle"
        app:layout_constraintStart_toStartOf="@id/tvDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="40dp"
        android:background="@drawable/circular_button_field"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/baloo2_bold"
        android:text="@string/petdetails_button_adopt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>